--- a/demo/cow.yaml
+++ b/demo/cow.yaml
@@ -1,7 +1,7 @@
 camera:
   width: 500
   height: 500
-  field-of-view: 60
+  fieldOfView: 60
   from: [0, 2.5, -10]
   to: [0, 1, 0]
   up: [0, 1, 0]
