--- a/demo/fiveBallRainbow.yaml
+++ b/demo/fiveBallRainbow.yaml
@@ -1,7 +1,7 @@
 camera:
   width: 1000
   height: 1000
-  field-of-view: 60
+  fieldOfView: 60
   from: [0, 0, -5]
   to: [0, 0, 0]
   up: [0, 1, 0]
